@@ -252,7 +252,6 @@ void    DrawFrames(void)
    {
       ClearMessage();
       SyncTextWin();
-      StatusLine();
       attrset(STATUS_LINE_ATTR->n_attr);
       sprintf(sign," $%d",curr_frame);
       mvaddstr(StatusLineY,COLS-4,sign);
